--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.2",
+    "cssnano": "^5.1.0",
+    "postcss-nested": "^5.0.6",
+    "postcss-preset-env": "^7.4.2",
+    "sass": "^1.49.9",
     "typescript": "^4.5.4",
     "vite": "^2.8.0"
   }
