--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.2",
     "cssnano": "^5.1.0",
+    "postcss": "^8.4.7",
     "postcss-nested": "^5.0.6",
     "postcss-preset-env": "^7.4.2",
     "sass": "^1.49.9",
