--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "postcss": "^8.4.7",
     "postcss-nested": "^5.0.6",
     "postcss-preset-env": "^7.4.2",
+    "postcss-sass": "^0.5.0",
     "sass": "^1.49.9",
     "typescript": "^4.5.4",
     "vite": "^2.8.0"
